# AppFlowy-Cloud

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SELF_HOST_LICENSE_AGREEMENT.md  compose.ci.yaml  compose.dev.yaml  compose.extras.yaml  compose.yaml  deny.toml  dep.yaml  deploy.env  dev.env  docker-compose-base.yml  docker-compose-ci.yml  docker-compose-dev.yml  docker-compose-external.yml  docker-compose-extras.yml  docker-compose-logging.yml  docker-compose-monitor.yml  docker-compose-stress-test.yml  docker-compose.yml  env.deploy.secret.example  env.dev.secret.example  example.env  script  shell.nix  sqlx-data.json
admin_frontend/: Cargo.toml  Dockerfile  README.md  dev.env
admin_frontend/assets/: base.css  home.css  login.css  logo.html  message.css  navigate.css  sidebar.css  top_menu_bar.css
admin_frontend/assets/apple/: logo.html
admin_frontend/assets/discord/: README.md  logo.html
admin_frontend/assets/github/: README.md  logo.html
admin_frontend/assets/google/: README.md  logo.css  logo.html
admin_frontend/assets/minio/: logo.html
admin_frontend/assets/portainer/: logo.html
admin_frontend/assets/postgres/: logo.html
admin_frontend/dev/: README.md  nginx.conf
admin_frontend/migrations/: 20230226000000_create_todo_table.sql
admin_frontend/src/: access_token.rs  api.rs  app.rs  askama_entities.rs  assets.rs  config.rs  error.rs  ext.rs  lib.rs  main.rs  models.rs  response.rs  session.rs  templates.rs  web_api.rs  web_app.rs
admin_frontend/src/ext/: api.rs  entities.rs  error.rs  mod.rs
admin_frontend/templates/: admin.html  admin2.html  admin_home.html  admin_sidebar.html  admin_top_menu_bar.html  admin_user_details.html  admin_users.html  appflowy_banner.html  change_password.html  create_user.html  home.html  login.html  logout.html  message.html  sidebar.html  sidebar_style.html  style.html  top_bar.html  top_menu_bar.html  user_details.html  users.html
admin_frontend/templates/components/: admin_navigate.html  admin_sidebar.html  admin_sso_create.html  admin_sso_detail.html  admin_sso_list.html  admin_top_menu_bar.html  admin_user_details.html  admin_users.html  change_password.html  change_password_form.html  create_user.html  invite.html  logout.html  message.html  navigate.html  shared_workspaces.html  sidebar.html  top_menu_bar.html  user_details.html  user_usage.html  workspace_usage.html
admin_frontend/templates/layouts/: base.html
admin_frontend/templates/pages/: admin_home.html  home.html  login.html  login_callback.html  login_v2.html  open_appflowy_or_download.html  payment_success_redirect.html  redirect.html
admin_frontend/tests/: main.rs
admin_frontend/tests/oauth/: mod.rs
admin_frontend/tests/utils/: mod.rs  test_config.rs
crates/realtime/: Cargo.toml
crates/realtime/src/: entities.rs  error.rs
crates/revdb/: Cargo.toml
crates/revdb/src/: db.rs  document.rs  error.rs  lib.rs  range.rs
crates/revdb/tests/: document.rs
crates/storage/: Cargo.toml
crates/storage/src/: collab.rs  entities.rs
crates/websocket/: Cargo.toml
crates/websocket/src/: channel_ext.rs  client.rs  entities.rs  error.rs  lib.rs  server.rs
libs/access-control/: Cargo.toml
libs/access-control/src/: access.rs  act.rs  adapter.rs  collab.rs  enforcer.rs  entity.rs  lib.rs  metrics.rs  request.rs  workspace.rs
libs/access-control/tests/: enforce_test.rs
libs/app-error/: Cargo.toml
libs/app-error/src/: gotrue.rs  lib.rs
libs/app_error/: Cargo.toml
libs/app_error/src/: gotrue.rs  lib.rs
libs/appflowy-ai/: Cargo.toml
libs/appflowy-ai-client/: Cargo.toml
libs/appflowy-ai-client/src/: client.rs  dto.rs  embedder.rs  error.rs  lib.rs
libs/appflowy-ai-client/tests/: main.rs
libs/appflowy-ai/src/: entity.rs
libs/appflowy-proto/: Cargo.toml  build.rs
libs/appflowy-proto/proto/: collab.proto  messages.proto  notification.proto  user.proto
libs/appflowy-proto/src/: client_message.rs  lib.rs  server_message.rs  shared.rs
libs/authentication/: Cargo.toml
libs/authentication/src/: jwt.rs  lib.rs  password.rs
libs/client-api/: Cargo.toml
libs/client-api-entity/: Cargo.toml
libs/client-api-entity/src/: id.rs  lib.rs
libs/client-api-test/: Cargo.toml
libs/client-api-test-util/: Cargo.toml
libs/client-api-test-util/src/: client.rs  lib.rs  log.rs  test_client.rs  user.rs
libs/client-api-test/src/: assertion_utils.rs  async_utils.rs  client.rs  database_util.rs  lib.rs  log.rs  test_client.rs  test_client_config.rs  test_client_v2.rs  user.rs  workspace_ops.rs
libs/client-api-wasm/: Cargo.toml  README.md
libs/client-api-wasm/src/: entities.rs  lib.rs
libs/client-api-wasm/tests/: test_client.rs  web.rs
libs/client-api/src/: config.rs  http.rs  http_access_request.rs  http_ai.rs  http_billing.rs  http_blob.rs  http_chat.rs  http_collab.rs  http_file.rs  http_guest.rs  http_history.rs  http_member.rs  http_native.rs  http_person.rs  http_publish.rs  http_quick_note.rs  http_search.rs  http_settings.rs  http_template.rs  http_test.rs  http_view.rs  http_wasm.rs  lib.rs  log.rs  notify.rs  ping.rs  refresher.rs  retry.rs
libs/client-api/tests/: main.rs
libs/client-websocket/: Cargo.toml
libs/client-websocket/src/: error.rs  lib.rs  message.rs  native.rs  web.rs
libs/collab-rt/: Cargo.toml
libs/collab-rt-entity/: Cargo.toml  build.rs
libs/collab-rt-entity/proto/: collab.proto  realtime.proto
libs/collab-rt-entity/src/: client_message.rs  collab_msg.rs  collab_proto.rs  lib.rs  message.rs  payload.rs  realtime_proto.rs  server_message.rs  user.rs
libs/collab-rt-entity/tests/: collab_msg_serde_test.rs  main.rs  rt_msg_serde_test.rs  serde_test.rs
libs/collab-rt-protocol/: Cargo.toml
libs/collab-rt-protocol/src/: data_validation.rs  lib.rs  message.rs  protocol.rs
libs/collab-rt/src/: client_msg_router.rs  (+9 more)
libs/collab-stream/: Cargo.toml
libs/database/: Cargo.toml
libs/database-entity/: Cargo.toml
libs/encrypt/: Cargo.toml
libs/gotrue/: Cargo.toml
libs/gotrue-entity/: Cargo.toml
libs/indexer/: Cargo.toml  README.md
libs/infra/: Cargo.toml
(+1748 files in other folders)
