[package]
name = "appflowy-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix.workspace = true
actix-web.workspace = true
actix-http = { workspace = true, default-features = false, features = ["openssl", "compress-brotli", "compress-gzip"] }
actix-rt = "2.9.0"
actix-web-actors = { version = "4.3" }
actix-service = "2.0.2"
actix-identity = "0.6.0"
actix-router = "0.5.2"
actix-session = { version = "0.8", features = ["redis-rs-tls-session"] }
openssl = { version = "0.10.62", features = ["vendored"] }

# serde
serde_json.workspace = true
serde_repr.workspace = true
serde.workspace = true

tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "fs",
    "time",
] }
tokio-stream.workspace = true
tokio-util = { version = "0.7.10", features = ["io"] }
futures-util = { workspace = true, features = ["std", "io"] }
once_cell = "1.19.0"
chrono = { version = "0.4.37", features = ["serde", "clock"], default-features = false }
derive_more = { version = "0.99" }
secrecy.workspace = true
rand = { version = "0.8", features = ["std_rng"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
reqwest = { workspace = true, features = ["json", "rustls-tls", "cookies"] }
unicode-segmentation = "1.10"
lazy_static.workspace = true
fancy-regex = "0.11.0"
validator = "0.16.1"
bytes = "1.5.0"
rcgen = { version = "0.10.0", features = ["pem", "x509-parser"] }
mime = "0.3.17"
rust-s3 = { version = "0.34.0-rc4", default-features = false, features = ["tokio-rustls-tls", "with-tokio", "no-verify-ssl"] }
redis = { workspace = true, features = ["json", "tokio-comp", "connection-manager"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "ansi", "json", "tracing-log"] }
tracing-bunyan-formatter = "0.3.9"
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
async-trait.workspace = true
prometheus-client.workspace = true
itertools = "0.11"
uuid = "1.6.1"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
dotenvy.workspace = true
url = "2.5.0"
brotli = "3.4.0"
dashmap.workspace = true
async-stream.workspace = true
futures.workspace = true
semver = "1.0.22"
governor = { version = "0.6.3" }
tonic.workspace = true
prost.workspace = true
tonic-proto.workspace = true
appflowy-collaborate = { path = "services/appflowy-collaborate" }

# ai
appflowy-ai-client = { workspace = true, features = ["dto", "client-api"] }
openai_dive = { workspace = true, features = ["rustls-tls"] }
pgvector = { workspace = true, features = ["sqlx"] }

collab = { workspace = true }
collab-document = { workspace = true }
collab-entity = { workspace = true }
collab-folder = { workspace = true }
collab-rt-protocol.workspace = true

#Local crate
snowflake = { path = "libs/snowflake" }
database.workspace = true
database-entity.workspace = true
gotrue = { path = "libs/gotrue" }
gotrue-entity = { path = "libs/gotrue-entity" }
infra = { path = "libs/infra" }
authentication.workspace = true
access-control.workspace = true
workspace-access.workspace = true
app-error = { workspace = true, features = ["sqlx_error", "actix_web_error", "tokio_error", "appflowy_ai_error"] }
shared-entity = { path = "libs/shared-entity", features = ["cloud"] }
workspace-template = { workspace = true }
collab-rt-entity.workspace = true
collab-stream.workspace = true

tonic-build = "0.11.0"
log = "0.4.20"
lettre = { version = "0.11.7", features = ["tokio1", "tokio1-native-tls"] }
handlebars = "5.1.2"


[dev-dependencies]
once_cell = "1.19.0"
tempfile = "3.9.0"
assert-json-diff = "2.0.2"
scraper = "0.17.1"
client-api-test = { path = "libs/client-api-test", features = ["collab-sync"] }
client-api = { path = "libs/client-api", features = ["collab-sync", "test_util", "sync_verbose_log", "test_fast_sync", "enable_brotli"] }
opener = "0.6.1"
image = "0.23.14"
collab-rt-entity.workspace = true

[[bin]]
name = "appflowy_cloud"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

#[[bench]]
#name = "access_control_benchmark"
#harness = false

[workspace]
members = [
    # libs
    "libs/snowflake",
    "libs/collab-rt-entity",
    "libs/database",
    "libs/database-entity",
    "libs/client-api",
    "libs/infra",
    "libs/shared-entity",
    "libs/gotrue",
    "libs/gotrue-entity",
    "admin_frontend",
    "libs/app-error",
    "libs/workspace-access",
    "libs/workspace-template",
    "libs/encrypt",
    "libs/authentication",
    "libs/access-control",
    "libs/collab-rt-protocol",
    "libs/collab-stream",
    "libs/client-websocket",
    "libs/client-api-test",
    "libs/wasm-test",
    "libs/client-api-wasm",
    "libs/appflowy-ai-client",
    # services
    "services/appflowy-history",
    "services/appflowy-indexer",
    "services/appflowy-collaborate",
    # xtask
    "xtask",
    "libs/tonic-proto",
]

[workspace.dependencies]
collab-rt-entity = { path = "libs/collab-rt-entity" }
collab-rt-protocol = { path = "libs/collab-rt-protocol" }
database = { path = "libs/database" }
database-entity = { path = "libs/database-entity" }
shared-entity = { path = "libs/shared-entity" }
gotrue-entity = { path = "libs/gotrue-entity" }
authentication = { path = "libs/authentication" }
access-control = { path = "libs/access-control" }
workspace-access = { path = "libs/workspace-access" }
app-error = { path = "libs/app-error" }
async-trait = "0.1.77"
prometheus-client = "0.22.0"
collab-stream = { path = "libs/collab-stream" }
dotenvy = "0.15.7"
secrecy = { version = "0.8", features = ["serde"] }
serde_json = "1.0.111"
serde_repr = "0.1.18"
serde = { version = "1.0.195", features = ["derive"] }
bytes = "1.5.0"
workspace-template = { path = "libs/workspace-template" }
uuid = { version = "1.6.1", features = ["v4"] }
anyhow = "1.0.79"
actix = "0.13.3"
actix-web = { version = "4.5.1", default-features = false, features = ["openssl", "compress-brotli", "compress-gzip"] }
actix-http = { version = "3.6.0", default-features = false }
tokio = { version = "1.36.0", features = ["sync"] }
tokio-stream = "0.1.14"
futures-util = "0.3.30"
bincode = "1.3.3"
client-websocket = { path = "libs/client-websocket" }
infra = { path = "libs/infra" }
tracing = { version = "0.1", features = ["log"] }
gotrue = { path = "libs/gotrue" }
redis = "0.25.2"
sqlx = { version = "0.7.4", default-features = false }
dashmap = "5.5.3"
futures = "0.3.30"
async-stream = "0.3.5"
reqwest = "0.11.27"
lazy_static = "1.4.0"
tonic = "0.11"
prost = "0.12"
tonic-proto = { path = "libs/tonic-proto" }
appflowy-ai-client = { path = "libs/appflowy-ai-client", default-features = false }
openai_dive = { version = "0.4", features = ["rustls-tls"] }
pgvector = { version = "0.3", features = ["sqlx"] }

# collaboration
yrs = "0.18.7"
collab = { version = "0.2.0" }
collab-entity = { version = "0.2.0" }
collab-folder = { version = "0.2.0" }
collab-document = { version = "0.2.0" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[patch.crates-io]
# It's diffcult to resovle different version with the same crate used in AppFlowy Frontend and the Client-API crate.
# So using patch to workaround this issue.
collab = { git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "870cd70" }
collab-entity = { git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "870cd70" }
collab-folder = { git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "870cd70" }
collab-document = { git = "https://github.com/AppFlowy-IO/AppFlowy-Collab", rev = "870cd70" }

[features]
history = []
