[package]
name = "realtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web-actors = { version = "4.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
bytes = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
parking_lot = "0.12.1"
tracing = "0.1.25"
futures-util = "0.3.26"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio = { version = "1.26.0", features = ["net", "sync", "macros"] }
dashmap = "5.4.0"
async-trait = "0.1.73"
anyhow = "1.0.75"

collab = { version = "0.1.0"}
collab-sync-protocol = { version = "0.1.0" }
storage = { path = "../storage" }
y-sync = { version = "0.3.1" }
yrs = "0.16.5"
lib0 = "0.16.3"
