[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collab = { version = "0.1.0"}
collab-sync-protocol = { version = "0.1.0" }
tokio = { version = "1.26", features = ["sync"] }
async-trait = "0.1.73"
anyhow = "1.0.75"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

secrecy = { version = "0.8", features = ["serde"] }

sqlx = { version = "0.7", default-features = false, features = ["postgres"] }


[features]
default = []