[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web-actors = { version = "4.2.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
bytes = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
parking_lot = "0.12.1"
tracing = "0.1.25"
futures-util = "0.3.26"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio = { version = "1.26", features = ["sync"] }

collab-ws = { version = "0.1.0"}
collab-sync = { version = "0.1.0"}
collab = { version = "0.1.0"}
collab-persistence = { version = "0.1.0"}
