[package]
name = "app-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0.56"
serde_repr = "0.1.18"
serde.workspace = true
anyhow.workspace = true
uuid = { workspace = true, features = ["v4"] }
sqlx = { workspace = true, default-features = false, features = [
  "postgres",
  "json",
], optional = true }
validator = { workspace = true, optional = true }
url = { version = "2.5.0" }
actix-web = { version = "4.4.1", optional = true }
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }
bincode = { version = "1.3.3", optional = true }
appflowy-ai-client = { workspace = true, optional = true, features = ["dto"] }
async-openai = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true }

[features]
default = []
sqlx_error = ["sqlx"]
validation_error = ["validator"]
actix_web_error = ["actix-web"]
tokio_error = ["tokio"]
gotrue_error = []
bincode_error = ["bincode"]
appflowy_ai_error = ["appflowy-ai-client", "async-openai"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
tsify = "0.4.5"
wasm-bindgen = "0.2.84"
