[package]
name = "app-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
serde_repr = "0.1.18"
serde.workspace = true
anyhow = "1.0.79"
uuid = { version = "1.6.1", features = ["v4"] }
sqlx = { version = "0.7", default-features = false, features = ["postgres", "json"], optional = true }
validator = { version = "0.16", optional = true }
rust-s3 = { version = "0.33.0", optional = true }
url = { version = "2.5.0"}
actix-web = { version = "4.4.1", optional = true }
reqwest = { version = "0.11" }
serde_json.workspace = true
tokio = { workspace = true, optional = true }

[features]
default = []
sqlx_error = ["sqlx"]
validation_error = ["validator"]
s3_error = ["rust-s3"]
actix_web_error = ["actix-web"]
tokio_error = ["tokio"]
gotrue_error= []
