[package]
name = "appflowy-ai-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
anyhow = "1.0.81"
tracing = "0.1"
serde_repr = "0.1.19"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "test-util"] }

[features]
verbose_log = []