[package]
name = "appflowy-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0.58"
anyhow = "1.0.81"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }