[package]
name = "appflowy-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid.workspace = true
bytes.workspace = true
thiserror.workspace = true
collab-entity.workspace = true
collab.workspace = true
prost = { version = "0.13.4", features = ["derive"] }

[build-dependencies]
prost-build = "0.13.4"
protoc-bin-vendored = { version = "3.0" }
